--- a/AtkTennisWeb/Views/AdminHome/Index.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/Index.cshtml
@@ -539,7 +539,7 @@
                                                                 <td>@item2.Name</td>
                                                                 <td>@item2.CourtPrice ₺ </td>
                                                                 <td>
-                                                                    <div class="custom-control custom-checkbox " id="checkPriceTable">
+                                                                    <div class="custom-control custom-checkbox " id="checkPriceTables">
 
                                                                         @{ if (item2.PriceType == "1")
                                                                             {
@@ -595,11 +595,11 @@
                                 Rezervasyon Detay Şema
                             </h3>
 
-                           
+
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <div  style="padding: 0px;">
+                            <div style="padding: 0px;">
                                 <style>
                                     .feeds li {
                                         background-color: #fafafa;
@@ -822,12 +822,6 @@
         </div>
     </div>
 </div>
-    </section>
-</div>
-
-        </div>
-    </section>
-</div>
 
 
 <!-- Modal -->
@@ -907,7 +901,7 @@
 
         getPrice();
 
-        $('#checkPriceTable input').click(function () {
+        $('#checkPriceTables input').click(function () {
             if ($(this).is(':checked'))
                 getPrice();
             else {
@@ -1260,7 +1254,7 @@
             times.push(this.name);
         });
 
-
+        debugger;
 
         var priceId = [];
         $('#checkPriceTable input:checked').each(function () {
@@ -1315,45 +1309,77 @@
         resobject.ResEvent = "event-1"
         resobject.CourtId = id;
 
+        if (times.length == 0) {
 
-        try {
+            swal({
+                title: "Rezervasyon Onaylanmadı",
+                text: "Lütfen Saat Seçiniz !",
+                icon: "error",
+                button: "Tamam",
+            }).then((value) => {
 
-            $.ajax({
-                type: "POST",
-                url: '../Public/NewReservation',
-                cache: false,
-                data: resobject,
-                dataType: "json",
-                async: true,
-                success: function (res) {
 
-                    if (res == true) {
 
-                        $('#rsvModal').modal('toggle');
-
-                        swal({
-                            title: "Rezervasyon Başarılı",
-                            text: "Rezervasyon Kaydınız Başarılı Bir Şekilde Gerçekleşti !",
-                            icon: "success",
-                            button: "Tamam",
-                        }).then((value) => {
-
-                            window.location.href = "Index?date=" + $('#timeNow').val();
-
-                        });
-                    }
-
-                },
-                error: function (textStatus, errorThrown) {
-                    console.log(JSON.stringify(textStatus));
-                    console.log(textStatus);
-                }
             });
-        } catch (e) {
-            console.log(e.message);
         }
 
+        else {
+            try {
+
+                $.ajax({
+                    type: "POST",
+                    url: '../Public/NewReservation',
+                    cache: false,
+                    data: resobject,
+                    dataType: "json",
+                    async: true,
+                    success: function (res) {
+
+                        if (res == true) {
+
+                            $('#rsvModal').modal('toggle');
+
+                            swal({
+                                title: "Rezervasyon Başarılı",
+                                text: "Rezervasyon Kaydınız Başarılı Bir Şekilde Gerçekleşti !",
+                                icon: "success",
+                                button: "Tamam",
+                            }).then((value) => {
+
+                                window.location.href = "Index?date=" + $('#timeNow').val();
+
+                            });
+                        }
+
+                        else {
+
+                            $('#rsvModal').modal('toggle');
+
+                            swal({
+                                title: "Rezervasyon Onaylanmadı",
+                                text: "Bakiye Yetersiz Lütfen Bakiye Yükleyiniz !",
+                                icon: "error",
+                                button: "Tamam",
+                            }).then((value) => {
+
+
+
+                            });
+                        }
+
+                    },
+                    error: function (textStatus, errorThrown) {
+                        console.log(JSON.stringify(textStatus));
+                        console.log(textStatus);
+                    }
+                });
+            } catch (e) {
+                console.log(e.message);
+            }
+
         }
+    }
+
 
     function WebReservation() {
 
@@ -1491,6 +1517,9 @@
         var  userId = $("#userId").text();
         $('#openResInf').modal('toggle');
 
+        if (true) {
+
+        }
         swal({
             title: "Emin Misiniz?",
             text: "Rezervasyon  İptal Edilecek !",
@@ -1519,7 +1548,7 @@
                                     button: "Tamam",
                                 }).then((value) => {
 
-                                    window.location.href = "Index?date=" + $('#timeNow').val();
+                                    window.location.href = "Reservation?date=" + $('#timeNow').val();
 
                                 });
 
@@ -1546,276 +1575,4 @@
 
 </script>
 
-<script>
-    $(document).ready(function () {
-        $("#example1").DataTable({
-            "responsive": true, "lengthChange": false, "autoWidth": false,
-            "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-        }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
 
-        $('#example2 , #example3 , #example4').DataTable({
-            "paging": true,
-            "lengthChange": false,
-            "searching": false,
-            "ordering": false,
-            "info": false,
-            "autoWidth": false,
-            "responsive": true,
-        });
-
-    });
-
-    $(function () {
-        /* ChartJS
-         * -------
-         * Here we will create a few charts using ChartJS
-         */
-
-        //--------------
-        //- AREA CHART -
-        //--------------
-
-        // Get context with jQuery - using jQuery's .get() method.
-        var areaChartCanvas = $('#areaChart').get(0).getContext('2d')
-
-        var areaChartData = {
-            labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-            datasets: [
-                {
-                    label: 'Digital Goods',
-                    backgroundColor: 'rgba(60,141,188,0.9)',
-                    borderColor: 'rgba(60,141,188,0.8)',
-                    pointRadius: false,
-                    pointColor: '#3b8bba',
-                    pointStrokeColor: 'rgba(60,141,188,1)',
-                    pointHighlightFill: '#fff',
-                    pointHighlightStroke: 'rgba(60,141,188,1)',
-                    data: [28, 48, 40, 19, 86, 27, 90]
-                },
-                {
-                    label: 'Electronics',
-                    backgroundColor: 'rgba(210, 214, 222, 1)',
-                    borderColor: 'rgba(210, 214, 222, 1)',
-                    pointRadius: false,
-                    pointColor: 'rgba(210, 214, 222, 1)',
-                    pointStrokeColor: '#c1c7d1',
-                    pointHighlightFill: '#fff',
-                    pointHighlightStroke: 'rgba(220,220,220,1)',
-                    data: [65, 59, 80, 81, 56, 55, 40]
-                },
-            ]
-        }
-
-        var areaChartOptions = {
-            maintainAspectRatio: false,
-            responsive: true,
-            legend: {
-                display: false
-            },
-            scales: {
-                xAxes: [{
-                    gridLines: {
-                        display: false,
-                    }
-                }],
-                yAxes: [{
-                    gridLines: {
-                        display: false,
-                    }
-                }]
-            }
-        }
-
-        // This will get the first returned node in the jQuery collection.
-        var areaChart = new Chart(areaChartCanvas, {
-            type: 'line',
-            data: areaChartData,
-            options: areaChartOptions
-        })
-
-        //-------------
-        //- LINE CHART -
-        //--------------
-        var lineChartCanvas = $('#lineChart').get(0).getContext('2d')
-        var lineChartOptions = $.extend(true, {}, areaChartOptions)
-        var lineChartData = $.extend(true, {}, areaChartData)
-        lineChartData.datasets[0].fill = false;
-        lineChartData.datasets[1].fill = false;
-        lineChartOptions.datasetFill = false
-
-        var lineChart = new Chart(lineChartCanvas, {
-            type: 'line',
-            data: lineChartData,
-            options: lineChartOptions
-        })
-
-        //-------------
-        //- DONUT CHART -
-        //-------------
-        // Get context with jQuery - using jQuery's .get() method.
-        var donutChartCanvas = $('#donutChart').get(0).getContext('2d')
-        var donutData = {
-            labels: [
-                'Chrome',
-                'IE',
-                'FireFox',
-                'Safari',
-                'Opera',
-                'Navigator',
-            ],
-            datasets: [
-                {
-                    data: [700, 500, 400, 600, 300, 100],
-                    backgroundColor: ['#f56954', '#00a65a', '#f39c12', '#00c0ef', '#3c8dbc', '#d2d6de'],
-                }
-            ]
-        }
-        var donutOptions = {
-            maintainAspectRatio: false,
-            responsive: true,
-        }
-        //Create pie or douhnut chart
-        // You can switch between pie and douhnut using the method below.
-        var donutChart = new Chart(donutChartCanvas, {
-            type: 'doughnut',
-            data: donutData,
-            options: donutOptions
-        })
-
-        //-------------
-        //- PIE CHART -
-        //-------------
-        // Get context with jQuery - using jQuery's .get() method.
-        var pieChartCanvas = $('#pieChart').get(0).getContext('2d')
-        var pieData = donutData;
-        var pieOptions = {
-            maintainAspectRatio: false,
-            responsive: true,
-        }
-        //Create pie or douhnut chart
-        // You can switch between pie and douhnut using the method below.
-        var pieChart = new Chart(pieChartCanvas, {
-            type: 'pie',
-            data: pieData,
-            options: pieOptions
-        })
-
-        //-------------
-        //- BAR CHART -
-        //-------------
-        var barChartCanvas = $('#barChart').get(0).getContext('2d')
-        var barChartData = $.extend(true, {}, areaChartData)
-        var temp0 = areaChartData.datasets[0]
-        var temp1 = areaChartData.datasets[1]
-        barChartData.datasets[0] = temp1
-        barChartData.datasets[1] = temp0
-
-        var barChartOptions = {
-            responsive: true,
-            maintainAspectRatio: false,
-            datasetFill: false
-        }
-
-        var barChart = new Chart(barChartCanvas, {
-            type: 'bar',
-            data: barChartData,
-            options: barChartOptions
-        })
-
-        //---------------------
-        //- STACKED BAR CHART -
-        //---------------------
-        var stackedBarChartCanvas = $('#stackedBarChart').get(0).getContext('2d')
-        var stackedBarChartData = $.extend(true, {}, barChartData)
-
-        var stackedBarChartOptions = {
-            responsive: true,
-            maintainAspectRatio: false,
-            scales: {
-                xAxes: [{
-                    stacked: true,
-                }],
-                yAxes: [{
-                    stacked: true
-                }]
-            }
-        }
-
-        var stackedBarChart = new Chart(stackedBarChartCanvas, {
-            type: 'bar',
-            data: stackedBarChartData,
-            options: stackedBarChartOptions
-        })
-    })
-
-
-    function addToDo() {
-
-        var d = new Date();
-        var today = d.getDate() + "-" + (d.getMonth() + 1) + "-" + d.getFullYear();
-
-        if ($("#toDo").val() == "") {
-
-            swal({
-                title: "Uyarı !",
-                text: "Lütfen Eksizsiz Doldurunuz!",
-                icon: "warning",
-                button: "Tamam",
-            });
-        }
-
-        else {
-
-
-            $.ajax({
-                type: "POST",
-                url: '../AdminHome/AddToDo',
-                cache: false,
-                data: { "toDo": $("#toDo").val(), "today": today },
-                dataType: "json",
-                async: true,
-                success: function (res) {
-
-
-                    if (res == true) {
-
-                        $('#openToDoModal').modal('toggle')
-
-                        swal({
-                            title: "Yapılacak Listesine Eklendi !",
-                            text: "İş Yükü Başarılı Bir Şekilde Eklendi !",
-                            icon: "success",
-                            button: "Tamam",
-                        }).then((value) => {
-
-                            window.location.href = "Index"
-
-                        });
-
-                    }
-
-                    else {
-                        $.confirm({
-                            title: "Uyarı",
-                            content: "Kayıt sırasında bir hata oluştu.",
-                            buttons: {
-                                TAMAM: function () {
-
-                                    window.location.href = "Index"
-                                }
-
-                            }
-                        });
-                    }
-
-                },
-
-                error: function (textStatus, errorThrown) {
-                    console.log(JSON.stringify(textStatus));
-                    console.log(textStatus);
-                }
-            });
-        }
-
-    }
-</script>
